@@ -3,6 +3,8 @@ package minicraft.level.tile;
 import minicraft.core.Game;
 import minicraft.core.io.Sound;
 import minicraft.entity.Direction;
+import minicraft.entity.Entity;
+import minicraft.entity.furniture.Furniture;
 import minicraft.entity.mob.Player;
 import minicraft.gfx.Screen;
 import minicraft.gfx.Sprite;
@@ -22,6 +24,10 @@ public class StairsTile extends Tile {
 	@Override
 	public void render(Screen screen, Level level, int x, int y) {
 		sprite.render(screen, x * 16, y * 16, 0, DirtTile.dCol(level.depth));
+	}
+
+	public boolean mayPass(Level level, int x, int y, Entity e) {
+		return !(e instanceof Furniture);
 	}
 
 	@Override
