@@ -1,12 +1,14 @@
 Minicraft+ version 2.1.0
 
 + Added credits menu
-* Fixed crash when inputing certain characters into the inventory searcher
+* Fixed crash when inputting certain characters into the inventory searcher
 * Fixed issue where level 2 airwizard would load with 250% health
 * Fixed crash when deleting world
 * Prevented animals and mobs from despawning while in view
+* Prevented furniture from being pushed over stairs
 * Shear loses durability when used on sheep
-* The world list should now update if copying or renaming worlds ingame
+* The world list should now update if copying or renaming worlds in-game
+* Pre-releases are now ignored from version check
 
 
 Minicraft+ version 2.0.7
